mdds 1.4.3

* documentation

  * added details on how to use two type of iterators with
    flat_segment_tree.

  * added new section to describe how to use mtv::collection to iterate
    through multiple multi_type_vector instances as a single collection
    in the direction orthogonal to the direction of the individual
    vectors.

  * added new page for R-tree.

* flat_segment_tree

  * fixed invalid memory access issue related to the swap() method which
    previously did not swap the non-leaf node pool store.  The invalid
    memory access may occur after the contents of two instances get
    swapped, one instance get destroyed then the caller calls
    search_tree() on the other instance still alive.

mdds 1.4.2

* all

  * fixed CXXFLAGS incorrectly being overwritten.

  * addressed a number of Coverity issues.

mdds 1.4.1

* all

  * fixed all warnings on shadowed variables.

* multi_type_matrix

  * all of its walk() methods now return either a copied or moved
    instance of the function object passed in as an input argument.
    Previously these methods had no return values.

mdds 1.4.0

* rtree (new)

  * new data structure designed for optimal storage and query
    performance on multi-dimensional spatial data.  The structure allows
    storage of both point and extent-based boundaries as keys associated
    with values.

* multi_type_vector

  * mtv::elemnt_block now has the following methods: data(), cbegin(),
    cend(), crbegin() and crend().

  * multi_type_vector now has cbegin(), cend(), crbegin(), and crend()
    methods.

  * some unnecessary user-provided special members have been removed to
    avoid warnings with -Wdeprecated-copy with GCC 9.

* multi_type_matrix

  * all of its walk() methods now allow in-line lambdas to be used, by
    not taking a reference of the function object parameters.

mdds 1.3.1

* flat_segment_tree

  * fixed a bug that caused an assertion error when inserting a